<resources>
    <string name="app_name">Travelcents</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <!--CurrencyConverter-->
    <string name="title_activity_currency_converter">CurrencyConverter</string>
    <string name="currency_title">Convert your currency now!</string>
    <string name="baseCurrency">From</string>
    <string name="convertCurrency">To</string>
    <string name="title_activity_budget">Budget</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_expenses">Expenses</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="title_activity_map">Map</string>
    <string name="weather">Weather</string>
    <string name="location">Locate Me</string>
    <string name="title_activity_weather_dialog">WeatherDialog</string>
    <string name="tempLabel">Temperature</string>
    <string name="tempMinLabel">Min. Temperature</string>
    <string name="tempMaxLabel">Max. Temperature</string>
    <string name="humidLabel">Humidity</string>
    <string name="accom">Accomomdation</string>
    <string name="advice_label">City:</string>
    <string name="advice_butt">Search</string>
    <string name="location_error">Sorry but our database does not contain information about this location!</string>
    <string name="adviceHint">City Name</string>


    <string-array name="adviceArray">
        <item>Country</item>
        <item>Location</item>
    </string-array>
</resources>
